poto: modified styles, alibi cards visibility bugs fixed

--- a/src/components/phantom_of_the_opera/phantom_of_the_opera.css
+++ b/src/components/phantom_of_the_opera/phantom_of_the_opera.css
@@ -28,12 +28,12 @@
 
 .roles-holder {
 	position: absolute;
-	left: 20px;
+	/*left: 20px;*/
 }
 
 .actions-holder {
 	position: absolute;
-	left: 20px;
+	/*left: 20px;*/
 	width: 250px;
 }
 
@@ -119,5 +119,5 @@
 
 .alibis-holder {
 	position: absolute;
-	left: 330px;
+	/*left: 330px;*/
 }
